<resources>
    <string name="app_name">My Car</string>
    <string name="title_notifications">Напоминания</string>
    <string name="title_car">Машина</string>
    <string name="title_service">Сервис</string>
    <string name="title_raskhody">Расходы</string>
    <string name="title_autoservise">Автосервис</string>
    <string name="title_profile">Профиль</string>
    <string name="title_activity_edit_zapravka">EditZapravka</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_servise_detail">ServiseDetail</string>
</resources>