<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_car">


    <fragment
        android:id="@+id/navigation_car"
        android:name="com.example.mycar.ui.Car.CarFragment"
        android:label="@string/title_car"
        tools:layout="@layout/fragment_car" />
    <fragment
        android:id="@+id/navigation_raskhody"
        android:name="com.example.mycar.ui.Raskhody.RaskhodyFragment"
        android:label="@string/title_raskhody"
        tools:layout="@layout/fragment_raskhody" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.mycar.ui.Notification.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_service"
        android:name="com.example.mycar.ui.Service.ServiceFragment"
        android:label="@string/title_service"
        tools:layout="@layout/fragment_service" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mycar.ui.Profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>